WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243490
Nullptr crash in Style::Scope::updateQueryContainerState
https://bugs.webkit.org/show_bug.cgi?id=243490
Summary
Nullptr crash in Style::Scope::updateQueryContainerState
Antti Koivisto
Reported
2022-08-03 01:52:55 PDT
Frame getting detached during layout
Attachments
Patch
(2.05 KB, patch)
2022-08-03 01:59 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2022-08-03 01:53:55 PDT
rdar://97196747
Antti Koivisto
Comment 2
2022-08-03 01:59:18 PDT
Created
attachment 461373
[details]
Patch
EWS
Comment 3
2022-08-03 09:34:51 PDT
Committed
253080@main
(51974bdf186d): <
https://commits.webkit.org/253080@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 461373
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug