Cherry-pick 51974bdf186d. rdar://problem/97196747

Nullptr crash in Style::Scope::updateQueryContainerState
    https://bugs.webkit.org/show_bug.cgi?id=243490
    <rdar://97196747>

    Reviewed by Alan Bujtas.

    * Source/WebCore/page/FrameViewLayoutContext.cpp:
    (WebCore::FrameViewLayoutContext::layout):
    (WebCore::FrameViewLayoutContext::performLayout):

    Looks like FrameView may get detached during layout with some clients.
    Try to fix by moving the view protection to layout() and doing hasOneRef() checks
    similar to what performLayout() does.

    Canonical link: https://commits.webkit.org/253080@main

Canonical link: https://commits.webkit.org/252432.121@safari-7614-branch